interface movable {

    public void move();

    public void turnLeft();

    public void turnRight();
}