@startuml
skinparam classAttributeIconSize 0
title UML refaktoriseringsplan

' =========================
' Interfaces (abstraherar modellen)
' =========================
interface Movable {
  + move() : void
  + turnLeft() : void
  + turnRight() : void
}

interface Transporter{

}

interface Transportable {
  + getX() : double
  + getY() : double
  + setPosition(x: double, y: double) : void
}

interface Turboable {
  + setTurboOn() : void
  + setTurboOff() : void
}

' =========================
' Domain model (Lab1)
' =========================
enum Direction {
  NORTH
  SOUTH
  EAST
  WEST
}

abstract class Vehicle {
  - x : double
  - y : double
  - direction : Direction
  + getX() : double
  + getY() : double
  + getDirection() : Direction
  + setDirection(d: Direction) : void
  + move() : void
  + gas(amount: double) : void
  + brake(amount: double) : void
  + startEngine() : void
  + stopEngine() : void
}

abstract class Car
class Volvo240
class Saab95
abstract class RampVehicle
class Scania

' =========================
' Workshop (Volvo-only as per requirement)
' =========================
class VolvoWorkshop {
  - capacity : int
  - stored : List
  - x : double
  - y : double
  + getX() : double
  + getY() : double
  + load(volvo: Volvo240) : void
  + unload() : Volvo240
  + numCars() : int
  + getCapacity() : int
}

' =========================
' Simulation / rules (SoC)
' =========================
class Simulation {
  - vehicles : List
  - workshop : VolvoWorkshop
  - wallHandler : WallCollisionHandler
  - workshopHandler : WorkshopCollisionHandler
  - bounds : Bounds
  + tick() : void
  + getVehicles() : List
  + getWorkshop() : VolvoWorkshop
}

class WallCollisionHandler {
  + handle(v: Vehicle, b: Bounds) : void
}

class WorkshopCollisionHandler {
  + handle(v: Vehicle, shop: VolvoWorkshop) : boolean
}

class Bounds {
  + minX : int
  + maxX : int
  + minY : int
  + maxY : int
}

' =========================
' GUI (Lab2) - decoupled
' =========================
class CarController {
  - simulation : Simulation
  + update() : void
  + gas(amount:int) : void
  + brake(amount:int) : void
  + startAll() : void
  + stopAll() : void
  + turnLeft() : void
  + turnRight() : void
  + up() : void
  + down() : void
  + turboOn() : void
  + turboOff() : void
  + raiseBed() : void
  + lowerBed() : void
}

class InputHandler {
  - controller : CarController
  + bindKeyboard() : void
  + bindButtons() : void
}

class CarView
class DrawPanel

class VehicleImages {
  + getImageKey(t: Transportable) : String
  + shouldFlip(v: Vehicle) : boolean
}

' =========================
' Relationships
' =========================

' Realization
Vehicle ..|> Movable
Vehicle ..|> Transportable
Saab95 ..|> Turboable

' Inheritance
Vehicle <|-- Car
Car <|-- Volvo240
Car <|-- Saab95
Vehicle <|-- RampVehicle
RampVehicle <|-- Scania

Vehicle --> Direction : direction

' Simulation owns rules and world state
Simulation o-- Vehicle : vehicles (0..*)
Simulation --> VolvoWorkshop : workshop
Simulation --> WallCollisionHandler
Simulation --> WorkshopCollisionHandler
Simulation --> Bounds

' Handlers depend on abstractions (low coupling)
WallCollisionHandler ..> Vehicle
WorkshopCollisionHandler ..> Vehicle
WorkshopCollisionHandler ..> VolvoWorkshop

' GUI structure
JFrame <|-- CarView
JPanel <|-- DrawPanel

CarController --> Simulation
CarController --> CarView : updates view

InputHandler --> CarController : calls

CarView --> DrawPanel
DrawPanel --> VehicleImages
DrawPanel ..> Transportable : renders list
DrawPanel ..> VolvoWorkshop : draws workshop image + count
VehicleImages ..> Transportable
VehicleImages ..> Vehicle

@enduml